--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,7 +1,8 @@
 {% include 'mainapp/base.html' %}
+{% load static %}
 
 {% block css %}
-    <link href="/static/css/index.css" rel="stylesheet">
+    <link href="{% static 'css/index.css' %}" rel="stylesheet">
 {% endblock css %}
 
 {% block content %}
