--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -60,7 +60,7 @@
                             <div class="card h-100">
                                 <a href="#">
                                     <img class="card-img-top"
-                                         src="{{ media_url }}{{product.image_url }}" alt="">
+                                         src="{{ product.image_url.url }}" alt="">
                                 </a>
                                 <div class="card-body">
                                     <h4 class="card-title">
