--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -57,6 +57,27 @@
                             {{ form.age }}
                         </div>
                     </div>
+                    {% if messages or form.errors %}
+                        <div class="form-row">
+                            <div class="col-lg-12">
+                                <div class="alert alert-{% if messages %}success{% else %}warning{% endif %} alert-dismissible fade show" role="alert"
+                                     style="margin-top: 30px;">
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            {{ message }}
+                                        {% endfor %}
+                                    {% else %}
+                                        {% for error in form.errors %}
+                                            {{ error }}
+                                        {% endfor %}
+                                    {% endif %}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
