--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -17,7 +17,7 @@
             <div class="card-header"><h3 class="text-center font-weight-light my-4">Регистрация</h3>
             </div>
             <div class="card-body">
-                <form action="{% url 'auth:registration' %}" , method="post">
+                <form action="{% url 'auth:registration' %}" method="post">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-md-6">
