--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -86,3 +86,7 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block js %}
+    <script src="{% static 'js/basket_script.js' %}"></script>
+{% endblock js %}
