--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -54,29 +54,7 @@
                     </a>
                 </div>
 
-                <div class="row">
-                    {% for product in products %}
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#">
-                                    <img class="card-img-top"
-                                         src="{{ product.image_url.url }}" alt="">
-                                </a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ product.name }}</a>
-                                    </h4>
-                                    <h5>{{ product.price }}p.</h5>
-                                    <p class="card-text">{{ product.description }}</p>
-                                </div>
-                                <div class="card-footer text-center">
-                                    <a class="btn btn-outline-success" href="{% url 'basket:add' product.pk %}">Отправить в корзину</a>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-
-                </div>
+                {% include 'mainapp/includes/inc_product_list.html' %}
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
