--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -57,20 +57,15 @@
                             {{ form.age }}
                         </div>
                     </div>
-                    {% if messages or form.errors %}
+                    {% if messages %}
                         <div class="form-row">
                             <div class="col-lg-12">
-                                <div class="alert alert-{% if messages %}success{% else %}warning{% endif %} alert-dismissible fade show" role="alert"
+                                <div class="alert alert-{% if messages.level == 25 %}success{% else %}warning{% endif %} alert-dismissible fade show"
+                                     role="alert"
                                      style="margin-top: 30px;">
-                                    {% if messages %}
-                                        {% for message in messages %}
-                                            {{ message }}
-                                        {% endfor %}
-                                    {% else %}
-                                        {% for error in form.errors %}
-                                            {{ error }}
-                                        {% endfor %}
-                                    {% endif %}
+                                    {% for message in messages %}
+                                        {{ message }}
+                                    {% endfor %}
                                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                         <span aria-hidden="true">×</span>
                                     </button>
@@ -91,3 +86,7 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block js %}
+    <script src="{% static 'js/basket_script.js' %}"></script>
+{% endblock js %}
