--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -78,9 +78,5 @@
 {% endblock content %}
 
 {% block footer %}
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; GeekShop {% now "Y" %}</p>
-        </div>
-    </footer>
+    {% include 'mainapp/includes/inc_footer.html' %}
 {% endblock footer %}
