--- a/adminapp/templates/adminapp/admin-users-read.html
+++ b/adminapp/templates/adminapp/admin-users-read.html
@@ -22,39 +22,23 @@
                                 <th>Активный</th>
                             </tr>
                             </thead>
-                            <tfoot>
-                            <tr>
-                                <th>Имя пользователя</th>
-                                <th>Имя</th>
-                                <th>Фамилия</th>
-                                <th>Адрес эл. почты</th>
-                                <th>Персонал сайта</th>
-                                <th>Активный</th>
-                            </tr>
-                            </tfoot>
                             <tbody>
+                           {% for user in users %}
                             <tr>
-                                <td><a href="#" style="color: dodgerblue">test</a></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td class="text-center"><i class="fas fa-check-circle"></i></td>
-                                <td class="text-center"><i class="fas fa-check-circle"></i></td>
+                                <td><a href="{% url 'admin:user_edit' user.pk %}" style="color: dodgerblue">{{ user.username }}</a></td>
+                                <td>{{ user.first_name }}</td>
+                                <td>{{ user.last_name }}</td>
+                                <td>{{ user.email }}</td>
+                                <td class="text-center"><i class="fas fa-{% if user.is_staff %}check{% else %}times{% endif %}-circle"></i></td>
+                                <td class="text-center"><i class="fas fa-{% if user.is_active %}check{% else %}times{% endif %}-circle"></i></td>
                             </tr>
-                            <tr>
-                                <td><a href="admin-users-update.html" style="color: dodgerblue">nikolay</a></td>
-                                <td>Nikolay</td>
-                                <td>Nagornyy</td>
-                                <td>isp06.ru</td>
-                                <td class="text-center"><i class="fas fa-times-circle"></i></td>
-                                <td class="text-center"><i class="fas fa-times-circle"></i></td>
-                            </tr>
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="admin-users-create.html">
+                    <a href="{% url 'admin:user_create' %}">
                         <button class="btn btn-success">Создать пользователя</button>
                     </a>
                 </div>
