Lesson_7. Adminapp category READ

--- a/adminapp/templates/adminapp/includes/inc_left_bar.html
+++ b/adminapp/templates/adminapp/includes/inc_left_bar.html
@@ -14,7 +14,7 @@
                     </div>
                     Пользователи
                 </a>
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="{% url 'admin:category_view' %}">
                     <div class="sb-nav-link-icon">
                         <svg class="svg-inline--fa fa-shopping-basket fa-w-18" aria-hidden="true" focusable="false"
                              data-prefix="fas" data-icon="shopping-basket" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -25,7 +25,7 @@
                     </div>
                     Категории
                 </a>
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="{% url 'admin:product_view' %}">
                     <div class="sb-nav-link-icon">
                         <svg class="svg-inline--fa fa-tshirt fa-w-20" aria-hidden="true" focusable="false"
                              data-prefix="fas" data-icon="tshirt" role="img" xmlns="http://www.w3.org/2000/svg"
