--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -3,34 +3,34 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Пользователи</h1>
+            <h1 class="mt-4">Все продукты</h1>
             <div class="card mb-4">
                 <div class="card-header">
                     <i class="fas fa-table mr-1"></i>
-                    Пользователи
+                    Продукты
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                             <thead>
                             <tr>
-                                <th>Имя пользователя</th>
                                 <th>Имя</th>
-                                <th>Фамилия</th>
-                                <th>Адрес эл. почты</th>
-                                <th>Персонал сайта</th>
+                                <th>Категория</th>
+                                <th>Описание</th>
+                                <th>Цена</th>
+                                <th>Кол-во</th>
                                 <th>Активный</th>
                             </tr>
                             </thead>
                             <tbody>
-                           {% for user in users %}
+                           {% for product in products %}
                             <tr>
-                                <td><a href="{% url 'admin:user_edit' user.pk %}" style="color: dodgerblue">{{ user.username }}</a></td>
-                                <td>{{ user.first_name }}</td>
-                                <td>{{ user.last_name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td class="text-center"><i class="fas fa-{% if user.is_staff %}check{% else %}times{% endif %}-circle"></i></td>
-                                <td class="text-center"><i class="fas fa-{% if user.is_active %}check{% else %}times{% endif %}-circle"></i></td>
+                                <td><a href="{% url 'admin:product_edit' product.pk %}" style="color: dodgerblue">{{ product.name }}</a></td>
+                                <td>{{ product.category }}</td>
+                                <td>{{ product.description }}</td>
+                                <td>{{ product.price }}</td>
+                                <td>{{ product.quantity }}</td>
+                                <td class="text-center"><i class="fas fa-{% if product.is_active %}check{% else %}times{% endif %}-circle"></i></td>
                             </tr>
                             {% endfor %}
                             </tbody>
@@ -38,8 +38,8 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="{% url 'admin:user_create' %}">
-                        <button class="btn btn-success">Создать пользователя</button>
+                    <a href="{% url 'admin:product_create' %}">
+                        <button class="btn btn-success">Создать продукт</button>
                     </a>
                 </div>
             </div>
