--- a/adminapp/templates/adminapp/users_edit.html
+++ b/adminapp/templates/adminapp/users_edit.html
@@ -3,46 +3,65 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование пользователя | valeriy</h1>
+            <h1 class="mt-4">Редактирование пользователя {% if edited_user.first_name %}{{ edited_user.first_name }}
+            {% else %}{{ edited_user.username }}{% endif %}</h1>
             <div class="card-body">
-                <form action="">
+                <form action="{% url 'admin:user_edit' edited_user.pk %}" method="post" , enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class="form-row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-5">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Имя</label>
-                                <input class="form-control py-4" id="inputFirstName" type="text" value="Николай"/>
+                                <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
+                                {{ form.first_name }}
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-5">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputLastName">Фамилия</label>
-                                <input class="form-control py-4" id="inputLastName" type="text" value="Нагорный"/>
+                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
+                                {{ form.last_name }}
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
+                                {{ form.age }}
                             </div>
                         </div>
                     </div>
                     <div class="form-row mb-2">
                         <div class="col-lg-12">
                             <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="userAvatar" size="50">
-                                <label class="custom-file-label" for="userAvatar">Выберите изображение</label>
+                                {{ form.avatar }}
+                                <label class="custom-file-label" for="{{ form.avatar.id_for_label }}">Выберите
+                                    изображение</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                            <input class="form-control py-4" id="inputUsername" type="text"
-                                   aria-describedby="usernameHelp"
-                                   value="nikolay"/>
+                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя
+                                пользователя</label>
+                            {{ form.username }}
                         </div>
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="inputEmailAddress">Адрес электронной
+                            <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
                                 почты</label>
-                            <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                   aria-describedby="emailHelp"
-                                   value="isp06@mail.ru"/>
+                            {{ form.email }}
                         </div>
                     </div>
+
+                    <div class="form-row text-center">
+                        <div class="col-lg-2">
+                            <label class="small mb-1" for="{{ form.is_staff.id_for_label }}">Работник
+                                магазина</label>
+                            {{ form.is_staff }}
+                        </div>
+                        <div class="col-lg-2">
+                            <label class="small mb-1" for="{{ form.is_active.id_for_label }}">Активен</label>
+                            {{ form.is_active }}
+                        </div>
+                    </div>
+
                     <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
@@ -51,7 +70,7 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        <a class="btn btn-danger btn-block" href="{% url 'admin:user_delete' edited_user.pk %}">Удалить</a>
                     </div>
                 </div>
             </div>
