--- a/adminapp/templates/adminapp/categories.html
+++ b/adminapp/templates/adminapp/categories.html
@@ -22,7 +22,7 @@
                            {% for category in categories %}
                             <tr>
                                 <td><a href="{% url 'admin:category_edit' category.pk %}" style="color: dodgerblue">{{ category.name | title }}</a></td>
-                                <td class="text-center"><i class="fas fa-{% if user.is_active %}check{% else %}times{% endif %}-circle"></i></td>
+                                <td class="text-center"><i class="fas fa-{% if category.is_active %}check{% else %}times{% endif %}-circle"></i></td>
                             </tr>
                             {% endfor %}
                             </tbody>
