--- a/adminapp/templates/adminapp/categories_create.html
+++ b/adminapp/templates/adminapp/categories_create.html
@@ -15,44 +15,11 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="form-group">
-                            <label class="small mb-1" for="{{ form.name.id_for_label }}">Описание</label>
+                            <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
                             {{ form.description }}
                         </div>
                     </div>
                 </div>
-{#                <div class="form-row mb-2">#}
-{#                    <div class="col-lg-12">#}
-{#                        <div class="custom-file">#}
-{#                            <input type="file" class="custom-file-input" id="userAvatar" size="50">#}
-{#                            <label class="custom-file-label" for="userAvatar">Выберите изображение</label>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-row">#}
-{#                    <div class="col-lg-6">#}
-{#                        <label class="small mb-1" for="inputUsername">Имя пользователя</label>#}
-{#                        <input class="form-control py-4" id="inputUsername" type="text"#}
-{#                               aria-describedby="usernameHelp"/>#}
-{#                    </div>#}
-{#                    <div class="col-lg-6">#}
-{#                        <label class="small mb-1" for="inputEmailAddress">Адрес электронной#}
-{#                            почты</label>#}
-{#                        <input class="form-control py-4" id="inputEmailAddress" type="email"#}
-{#                               aria-describedby="emailHelp"/>#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="form-row">#}
-{#                    <div class="col-lg-6">#}
-{#                        <label class="small mb-1" for="inputPassword1">Пароль</label>#}
-{#                        <input class="form-control py-4" id="inputPassword1" type="text"#}
-{#                               aria-describedby="password1Help"/>#}
-{#                    </div>#}
-{#                    <div class="col-lg-6">#}
-{#                        <label class="small mb-1" for="inputPassword2">Повторите пароль</label>#}
-{#                        <input class="form-control py-4" id="inputPassword2" type="text"#}
-{#                               aria-describedby="password2Help"/>#}
-{#                    </div>#}
-{#                </div>#}
                 <div class="form-row">
                     <div class="col-lg-12" style="margin-top: 33px;">
                         <input class="btn btn-info btn-block" type="submit" value="Сохранить">
