--- a/adminapp/templates/adminapp/products_edit.html
+++ b/adminapp/templates/adminapp/products_edit.html
@@ -3,55 +3,63 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование пользователя | valeriy</h1>
+            <h1 class="mt-4">Редактирование продукта {{ edited_product.name }}</h1>
             <div class="card-body">
-                <form action="">
-                    <div class="form-row">
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName">Имя</label>
-                                <input class="form-control py-4" id="inputFirstName" type="text" value="Николай"/>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label class="small mb-1" for="inputLastName">Фамилия</label>
-                                <input class="form-control py-4" id="inputLastName" type="text" value="Нагорный"/>
-                            </div>
+                <form action="{% url 'admin:product_edit' edited_product.pk %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.name.id_for_label }}">Имя</label>
+                            {{ form.name }}
                         </div>
                     </div>
-                    <div class="form-row mb-2">
-                        <div class="col-lg-12">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="userAvatar" size="50">
-                                <label class="custom-file-label" for="userAvatar">Выберите изображение</label>
-                            </div>
+                    <div class="col-lg-5">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.category.id_for_label }}">Категория</label>
+                            {{ form.category }}
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                            <input class="form-control py-4" id="inputUsername" type="text"
-                                   aria-describedby="usernameHelp"
-                                   value="nikolay"/>
-                        </div>
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="inputEmailAddress">Адрес электронной
-                                почты</label>
-                            <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                   aria-describedby="emailHelp"
-                                   value="isp06@mail.ru"/>
+                     <div class="col-lg-1 text-center">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.is_active.id_for_label }}">Активен</label>
+                            {{ form.is_active }}
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                </div>
+                <div class="form-row mb-2">
+                    <div class="col-lg-12">
+                        <div class="custom-file">
+                            {{ form.image_url }}
+                            <label class="custom-file-label" for="{{ form.image_url.id_for_label }}">Выберите изображение</label>
                         </div>
                     </div>
-                </form>
+                </div>
+                <div class="form-row mb-2">
+                    <div class="col-lg-12">
+                        <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
+                        {{ form.description }}
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="{{ form.price.id_for_label }}">Цена</label>
+                        {{ form.price }}
+                    </div>
+                    <div class="col-lg-2">
+                        <label class="small mb-1" for="{{ form.quantity.id_for_label }}">Количество</label>
+                        {{ form.quantity }}
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-info btn-block" type="submit" value="Сохранить">
+                    </div>
+                </div>
+            </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        <a class="btn btn-danger btn-block" href="{% url 'admin:product_delete' edited_product.pk %}">Удалить</a>
                     </div>
                 </div>
             </div>
