--- a/adminapp/templates/adminapp/products_create.html
+++ b/adminapp/templates/adminapp/products_create.html
@@ -24,7 +24,8 @@
                     <div class="col-lg-12">
                         <div class="custom-file">
                             {{ form.image_url }}
-                            <label class="custom-file-label" for="{{ form.image_url.id_for_label }}">Выберите изображение</label>
+                            <label class="custom-file-label" for="{{ form.image_url.id_for_label }}">Выберите
+                                изображение</label>
                         </div>
                     </div>
                 </div>
