--- a/adminapp/templates/adminapp/users_edit.html
+++ b/adminapp/templates/adminapp/users_edit.html
@@ -70,7 +70,8 @@
                 </form>
                 <div class="row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <a class="btn btn-danger btn-block" href="{% url 'admin:user_delete' edited_user.pk %}">Удалить</a>
+                        <a class="btn btn-danger btn-block"
+                           href="{% url 'admin:user_delete' edited_user.pk %}">Удалить</a>
                     </div>
                 </div>
             </div>
