Lesson_8. Categories menu

--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -13,14 +13,15 @@
             <div class="col-lg-3">
 
                 <h1 class="my-4">GeekShop</h1>
+                <div class="list-group mb-1">
+                    <a href="{% url 'products:index' %}" class="list-group-item">Все</a>
+                </div>
                 <div class="list-group">
                     {% for category in categories %}
-                        <a href="#" class="list-group-item">{{ category|title }}</a>
+                        <a href="{% url 'mainapp:products' category.pk %}" class="list-group-item">{{ category|title }}</a>
                     {% endfor %}
                 </div>
-
             </div>
-            <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
 
