Lesson_8. Category CBV

--- a/adminapp/templates/adminapp/productcategory_create.html
+++ b/adminapp/templates/adminapp/productcategory_create.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Создание категории</h1>
+            <h1 class="mt-4">Новая категория</h1>
             <form action="{% url 'admin:category_create' %}" method="post">
                 {% csrf_token %}
                 <div class="form-column">
