--- a/adminapp/templates/adminapp/productcategory_delete.html
+++ b/adminapp/templates/adminapp/productcategory_delete.html
@@ -2,11 +2,10 @@
 
 {% block content %}
     <main>
-        <
         <div class="container-fluid">
-            <h1 class="mt-4">Удаление категории {{ deleted_category.name }}</h1>
+            <h1 class="mt-4">Удаление категории {{ object.name }}</h1>
         </div>
-        <form action="{% url 'admin:category_delete' deleted_category.pk %}" method="post">
+        <form action="{% url 'admin:category_delete' object.pk %}" method="post">
             {% csrf_token %}
             <div class="row text-center">
                 <div class="col-lg-6 ml-3" style="margin-top: 33px;">
