--- a/adminapp/templates/adminapp/productcategory_list.html
+++ b/adminapp/templates/adminapp/productcategory_list.html
@@ -19,9 +19,9 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for category in categories %}
-                                <tr class="{% if not user.is_active %}text-muted bg-light{% endif %}">
-                                    <td><a class="{% if not user.is_active %}text-muted{% endif %}"
+                            {% for category in object_list %}
+                                <tr class="{% if not category.is_active %}text-muted{% endif %}">
+                                    <td><a class="{% if not category.is_active %}text-muted{% endif %}"
                                            href="{% url 'admin:category_edit' category.pk %}"
                                            style="color: dodgerblue">{{ category.name | title }}</a></td>
                                     <td class="text-center"><i
