Lesson_8. Adminapp full CBV

--- a/adminapp/templates/adminapp/product_create.html
+++ b/adminapp/templates/adminapp/product_create.html
@@ -13,10 +13,16 @@
                             {{ form.name }}
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-5">
                         <div class="form-group">
                             <label class="small mb-1" for="{{ form.category.id_for_label }}">Категория</label>
                             {{ form.category }}
+                        </div>
+                    </div>
+                    <div class="col-lg-1 text-center">
+                        <div class="form-group">
+                            <label class="small mb-1" for="{{ form.is_active.id_for_label }}">Активен</label>
+                            {{ form.is_active }}
                         </div>
                     </div>
                 </div>
