--- a/adminapp/templates/adminapp/product_update.html
+++ b/adminapp/templates/adminapp/product_update.html
@@ -3,9 +3,9 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование продукта {{ edited_product.name }}</h1>
+            <h1 class="mt-4">Редактирование продукта {{ object.name }}</h1>
             <div class="card-body">
-                <form action="{% url 'admin:product_edit' edited_product.pk %}" method="post"
+                <form action="{% url 'admin:product_edit' object.pk %}" method="post"
                       enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
@@ -59,11 +59,13 @@
                         </div>
                     </div>
                 </form>
-                <div class="row">
-                    <div class="col-lg-12" style="margin-top: 33px;">
-                        <a class="btn btn-danger btn-block" href="{% url 'admin:product_delete' edited_product.pk %}">Удалить</a>
+                {% if object.is_active %}
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <a class="btn btn-danger btn-block" href="{% url 'admin:product_delete' object.pk %}">Удалить</a>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </main>
