--- a/adminapp/templates/adminapp/productcategory_create.html
+++ b/adminapp/templates/adminapp/productcategory_create.html
@@ -6,20 +6,28 @@
             <h1 class="mt-4">Новая категория</h1>
             <form action="{% url 'admin:category_create' %}" method="post">
                 {% csrf_token %}
-                <div class="form-column">
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="small mb-1" for="{{ form.name.id_for_label }}">Имя</label>
-                            {{ form.name }}
+                <div class="form-row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.name.id_for_label }}">Имя</label>
+                                {{ form.name }}
+                            </div>
+                        </div>
+                        <div class="col-lg-1 text-center">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.is_active.id_for_label }}">Активна</label>
+                                {{ form.is_active }}
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="form-group">
-                            <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
-                            {{ form.description }}
+                    <div class="form-row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
+                                {{ form.description }}
+                            </div>
                         </div>
                     </div>
-                </div>
                 <div class="form-row">
                     <div class="col-lg-12" style="margin-top: 33px;">
                         <input class="btn btn-info btn-block" type="submit" value="Сохранить">
