--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -13,14 +13,8 @@
             <div class="col-lg-3">
 
                 <h1 class="my-4">GeekShop</h1>
-                <div class="list-group">
-                    {% for category in categories %}
-                        <a href="#" class="list-group-item">{{ category|title }}</a>
-                    {% endfor %}
-                </div>
-
+                {% include 'mainapp/includes/inc_category_menu.html' %}
             </div>
-            <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
 
@@ -54,21 +48,23 @@
                     </a>
                 </div>
 
-                {% include 'mainapp/includes/inc_product_list.html' %}
+                <div class="products-list">
+                    {% include 'mainapp/includes/inc_product_list.html' %}
+                </div>
 
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item disabled">
-                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                        </li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
-                        </li>
-                    </ul>
-                </nav>
+{#                <nav aria-label="Page navigation example">#}
+{#                    <ul class="pagination justify-content-center">#}
+{#                        <li class="page-item {% if not products.has_previous %}disabled{% endif %}">#}
+{#                            <a class="page-link" href="{% url 'mainapp:page' categories.pk products.previous_page_number %}" tabindex="-1" aria-disabled="true">Previous</a>#}
+{#                        </li>#}
+{##}
+{#                        <li class="page-item"><a class="page-link" href="#">1</a></li>#}
+{##}
+{#                        <li class="page-item {% if not products.has_next %}disabled{% endif %}">#}
+{#                            <a class="page-link" href="{% url 'mainapp:page' categories.pk products.next_page_number %}">Next</a>#}
+{#                        </li>#}
+{#                    </ul>#}
+{#                </nav>#}
 
             </div>
 
@@ -80,3 +76,7 @@
 {% block footer %}
     {% include 'mainapp/includes/inc_footer.html' %}
 {% endblock footer %}
+
+{#{% block js %}#}
+{#    <script src="{% static 'js/products_script.js' %}"></script>#}
+{#{% endblock js %}#}
