--- a/adminapp/templates/adminapp/productcategory_create.html
+++ b/adminapp/templates/adminapp/productcategory_create.html
@@ -3,11 +3,10 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование категории {{ edited_category.name }}</h1>
-            <div class="card-body">
-                <form action="{% url 'admin:category_edit' edited_category.pk %}" method="post">
-                    {% csrf_token %}
-                    <div class="form-row">
+            <h1 class="mt-4">Новая категория</h1>
+            <form action="{% url 'admin:category_create' %}" method="post">
+                {% csrf_token %}
+                <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="{{ form.name.id_for_label }}">Имя</label>
@@ -29,18 +28,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
-                        </div>
-                    </div>
-                </form>
-                <div class="row">
+                <div class="form-row">
                     <div class="col-lg-12" style="margin-top: 33px;">
-                        <a class="btn btn-danger btn-block" href="{% url 'admin:category_delete' edited_category.pk %}">Удалить</a>
+                        <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </main>
 {% endblock content %}
