--- a/adminapp/templates/adminapp/shopuser_create.html
+++ b/adminapp/templates/adminapp/shopuser_create.html
@@ -30,7 +30,8 @@
                     <div class="col-lg-12">
                         <div class="custom-file">
                             {{ form.avatar }}
-                            <label class="custom-file-label" for="{{ form.avatar.id_for_label }}">Выберите изображение</label>
+                            <label class="custom-file-label" for="{{ form.avatar.id_for_label }}">Выберите
+                                изображение</label>
                         </div>
                     </div>
                 </div>
