--- a/adminapp/templates/adminapp/shopuser_update.html
+++ b/adminapp/templates/adminapp/shopuser_update.html
@@ -3,10 +3,10 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Редактирование пользователя {% if edited_user.first_name %}{{ edited_user.first_name }}
-            {% else %}{{ edited_user.username }}{% endif %}</h1>
+            <h1 class="mt-4">Редактирование пользователя {% if object.first_name %}{{ object.first_name }}
+            {% else %}{{ object.username }}{% endif %}</h1>
             <div class="card-body">
-                <form action="{% url 'admin:user_edit' edited_user.pk %}" method="post" , enctype="multipart/form-data">
+                <form action="{% url 'admin:user_edit' object.pk %}" method="post" , enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-5">
@@ -68,11 +68,14 @@
                         </div>
                     </div>
                 </form>
-                <div class="row">
-                    <div class="col-lg-12" style="margin-top: 33px;">
-                        <a class="btn btn-danger btn-block" href="{% url 'admin:user_delete' edited_user.pk %}">Удалить</a>
+                {% if object.is_active %}
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <a class="btn btn-danger btn-block"
+                               href="{% url 'admin:user_delete' object.pk %}">Удалить</a>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
         </div>
     </main>
