--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -32,7 +32,7 @@
             <div class="navbar-text">{% now "d F Y" %}</div>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products:index' %}">Каталог <i class="fas fa-shopping-bag"></i>
+                    <a class="nav-link" href="{% url 'mainapp:products' 0 %}">Каталог <i class="fas fa-shopping-bag"></i>
                     </a>
                 </li>
                 {% if not user.is_authenticated %}
