--- a/authapp/templates/authapp/profile.html
+++ b/authapp/templates/authapp/profile.html
@@ -52,12 +52,6 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
-                            {{ form.age }}
-                        </div>
-                    </div>
-                    <div class="form-row">
                         <div class="col-lg-12">
                             <label class="small mb-1" for="{{ form.tagline.id_for_label }}">Теги</label>
                             {{ form_profile.tagline }}
@@ -65,8 +59,12 @@
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="{{ form.gender.id_for_label }}">Пол</label>
+                            <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
+                            {{ form.age }}
+                            <label class="small mb-1" for="{{ form_profile.gender.id_for_label }}">Пол</label>
                             {{ form_profile.gender }}
+                            <label class="small mb-1" for="{{ form.gender.country.id_for_label }}">Страна</label>
+                            {{ form_profile.country }}
                         </div>
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.about_me.id_for_label }}">О себе</label>
